--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -25,9 +25,20 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Use Environment Secret
+        run: echo "The Google Analytics ID from the environment is $GOOGLE_ANALYTICS_ID"
+        env:
+          GOOGLE_ANALYTICS_ID: ${{ secrets.GOOGLE_ANALYTICS_ID }}
+
+      # dynamically update _config.yml here before building
+      - name: Update config with environment secret
+        run: |
+          sed -i 's/GOOGLE_ANALYTICS_ID:.*$/GOOGLE_ANALYTICS_ID: "${{ secrets.GOOGLE_ANALYTICS_ID }}"/' _config.yml
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
