still trying to get envar to be injected

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # Site settings
 title: "Healthy Lifestyle Guide"
 description: "Health & Wellness Guide: Tips for Nutrition, Fitness, and Mental Health."
+twitter_username: andysalmela
+github_username:  salmeister
 remote_theme: pages-themes/cayman@v0.2.0
 google_analytics: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
 plugins:
