--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ description: "Health & Wellness Guide: Tips for Nutrition, Fitness, and Mental H
 twitter_username: andysalmela
 github_username:  salmeister
 remote_theme: pages-themes/cayman@v0.2.0
-google_analytics: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
+ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
+include:
+  - Notes/**/*.md
