--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Update Google Analytics ID in config
         run: |
-          sed -i 's/google_analytics:.*$/google_analytics: "${{ secrets.GOOGLE_ANALYTICS_ID }}"/' _config.yml
+          sed -i 's/ga4_id:.*$/ga4_id: "${{ secrets.GOOGLE_ANALYTICS_ID }}"/' _config.yml
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
