--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
 plugins:
   - jekyll-remote-theme
 include:
-  - Notes/Happiness/Podcasts/*.md
+  - notes/**/*.md
