--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,7 @@ permalink: pretty
 ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
 plugins:
   - jekyll-remote-theme
-include:
-  - notes/**/*
+collections:
+  notes:
+    output: true
+    permalink: /notes/:path/
