--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Healthy Lifestyle Guide"
+title: "Thriving Healthy"
 description: "Health & Wellness Guide: Tips for Nutrition, Fitness, and Mental Health."
 ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
 remote_theme: pages-themes/cayman@v0.2.0
