Enhance SEO and Accessibility Features
- Updated head-custom.html to include enhanced SEO meta tags, Open Graph, Twitter cards, and JSON-LD structured data for better search engine visibility and social media sharing.
- Improved accessibility with ARIA roles and labels in default.html, including breadcrumb navigation and search functionality.
- Added article schema markup for notes to improve search engine understanding of content.
- Enhanced styling in style.scss for breadcrumb navigation, article metadata, related content, and monetization elements.
- Updated index.md with improved descriptions, keywords, and navigation for better user experience.
- Created robots.txt to manage search engine crawling and sitemap.xml for better indexing of site content.

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,62 @@
 # Site settings
 title: "Thriving Healthy"
 description: "Health & Wellness Guide: Tips for Nutrition, Fitness, and Mental Health."
+url: "https://thrivinghealthy.com/"
+baseurl: ""
+author: "Thriving Healthy"
 ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
+
+# SEO Settings
+lang: "en-US"
+timezone: "America/New_York"
+
+# Social Media
+social:
+  twitter: "@thrivinghealth"
+  
+# Jekyll Settings
 remote_theme: pages-themes/cayman@v0.2.0
 permalink: pretty
+
+# Plugins
 plugins:
   - jekyll-remote-theme
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+
+# Collections
 collections:
   notes:
     output: true
     permalink: /notes/:path/
+
+# Defaults
 defaults:
   - scope:
       path: ""
       type: "notes"
     values:
       layout: "default"
+      author: "Thriving Healthy"
+      category: "Health & Wellness"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
+
+# SEO tag settings
+tag_manager:
+  gtm_id: ""
+
+# Exclude files from processing
+exclude:
+  - README.md
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
