Add nutrition, fitness, and sleep guides; enhance related articles and RSS feed integration

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,12 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
 
+# Feed Settings
+feed:
+  categories:
+    - notes
+  excerpt_only: false
+  
 # Collections
 collections:
   notes:
