--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Thriving Healthy"
-description: "Health & Wellness Guide: Tips for Nutrition, Fitness, and Mental Health."
-url: "https://thrivinghealthy.com/"
+description: "Expert health podcast summaries & wellness guides from Dr. Huberman, Dr. Mindy Pelz, Joe Rogan & more. AI-powered notes on nutrition, fasting, fitness, sleep & brain health."
+url: "https://thrivinghealthy.com"
 baseurl: ""
 author: "Thriving Healthy"
 ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
@@ -9,10 +9,14 @@ ga4_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
 # SEO Settings
 lang: "en-US"
 timezone: "America/New_York"
+tagline: "Your Evidence-Based Health & Wellness Resource Hub"
 
 # Social Media
 social:
   twitter: "@thrivinghealth"
+
+# Logo for structured data
+logo: "/assets/images/thehealthylifestyleguide-thumbnail.png"
   
 # Jekyll Settings
 remote_theme: pages-themes/cayman@v0.2.0
